--- a/VitalzApp/app/src/main/res/values-night/strings.xml
+++ b/VitalzApp/app/src/main/res/values-night/strings.xml
@@ -35,4 +35,8 @@
     <string name="contact_number">Contact Number</string>
   <string name="doctor_contact_number">Doctor Contact Number</string>
     <string name="list_of_medications">List of Medications</string>
+    <string name="average">Average</string>
+    <string name="min">Min</string>
+  <string name="max">Max</string>
+    <string name="bpm">BPM</string>
 </resources>
