--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -44,4 +44,8 @@
     <string name="doctor_contact_number">Doctor Contact Number</string>
     <string name="list_of_medications">List of Medications</string>
     <string name="add">Add</string>
+    <string name="average">Average</string>
+    <string name="min">Min</string>
+    <string name="max">Max</string>
+    <string name="bpm">BPM</string>
 </resources>
