--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -57,4 +57,9 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password ?</string>
     <string name="login">Login</string>
+    <string name="heart_rate">Heart Rate</string>
+    <string name="start_date">Start Date :</string>
+    <string name="sample_startDate">Apr 2 2021</string>
+    <string name="end_date">End Date :</string>
+    <string name="sample_endDate">Apr 9, 2021</string>
 </resources>
