--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -76,4 +76,12 @@
     <string name="sample_posture">Straight</string>
     <string name="activity">Activity</string>
     <string name="sample_activity">200 Steps</string>
+    <string name="hospitals">Hospitals</string>
+
+    //Toast Messages
+    <string name="empty">Please enter Mobile Number</string>
+    <string name="shortLength">Please enter 10 Digits</string>
+    <string name="invalid">Please enter Valid Mobile Number</string>
+    <string name="unknown">Please Contact Admin/Hospital</string>
+
 </resources>
