--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -112,5 +112,9 @@
     <string name="search_patient">Search Patient</string>
     <string name="ble_not_suppported">This device does not support Bluetooth, You cannot use the app</string>
     <string name="no_records_found">Sorry! No Records Found</string>
+    <string name="start_scan">Start Scan</string>
+    <string name="stop_scan">Stop Scan</string>
+    <string name="error_with_device">Error with bluetooth device</string>
+    <string name="no_devices_found">No Devices Found</string>
 
 </resources>
