--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -116,5 +116,6 @@
     <string name="stop_scan">Stop Scan</string>
     <string name="error_with_device">Error with bluetooth device</string>
     <string name="no_devices_found">No Devices Found</string>
+    <string name="vitalz_health">VITALZ HEALTH</string>
 
 </resources>
