--- a/VitalzApp/app/src/main/res/values/strings.xml
+++ b/VitalzApp/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="confirm_otp">Confirm OTP</string>
     <string name="start_using_the_device">Start using the Device</string>
     <string name="add_device">Add Device</string>
+    <string name="patient_details">Patient Details</string>
     <string name="title_activity_dashboard">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
